--- a/웹.md
+++ b/웹.md
@@ -82,89 +82,79 @@ json은 문자열을 전송받은 후에 해당 문자열을 바로 파싱하므
 
  
 
-**- jsp vs servlet**
+##### jsp vs servlet
 
-두 기술 모두 자바 기반으로 웹 프로그래밍을 수행하기 위해 존재하는 기술이다. Servlet은 java코드안에 html 언어를 작성하는 방식이지만, jsp는반대로 html언어 안에 java 코드를 작성한다. Jsp는 servlet의 불편함을 극복하기 위해 고안된 기술이고, jsp는 컴파일 될 때 서블릿으로 한번 변환된 후 컴파일 된다는 특성이 있다.
-
- 
-
-**- mvc1 vs mvc2**
-
-  
+  두 기술 모두 자바 기반으로 웹 프로그래밍을 수행하기 위해 존재하는 기술이다. Servlet은 java코드안에 html 언어를 작성하는 방식이지만, jsp는반대로 html언어 안에 java 코드를 작성한다. Jsp는 servlet의 불편함을 극복하기 위해 고안된 기술이고, jsp는 컴파일 될 때 서블릿으로 한번 변환된 후 컴파일 된다는 특성이 있다.
 
  
 
+##### mvc1 vs mvc2
+
+![mvc1](https://github.com/ssyup4259/interview/blob/master/img/mvc1.png?raw=true)
+
+ ![mvc2](https://github.com/ssyup4259/interview/blob/master/img/mvc2.png?raw=true)
+
  
 
-**- mvc 구조**
+##### mvc 구조
 
- 모델: 비즈니스 영역의 로직을 선택, 뷰: 비즈니스 영역에 대한 화면을 담당, 컨트롤러: 사용자의 입력 처리와 흐름 제어를 담당
+- 모델: 비즈니스 영역의 로직을 선택
+- 뷰: 비즈니스 영역에 대한 화면을 담당
+- 컨트롤러: 사용자의 입력 처리와 흐름 제어를 담당
 
  서블릿의 자바에 html 언어를 섞어 쓰는 불편함 때문에 jsp가 생겨났고 jsp에 자바 언어를 쓰는 불편함에 모델 2 구조가 생겨 났다고 봐도 된다.
 
  
 
-**- 포워드 와 리다이렉트**
+##### 포워드 와 리다이렉트
+
+ ![forward](https://github.com/ssyup4259/interview/blob/master/img/forward.png?raw=true)
 
  
 
- 
+##### 검색엔진 동작원리
 
-**- 검색엔진 동작원리**
+  검색 엔진은 크게 정보 수집, 색인 그리고 검색의 순서로 동작합니다. 검색 엔진은 사용자가 검색 엔진을 사용하기 전에 미리 웹 상에서 정보를 수집하여 색인을 만들어 놓습니다. 그리고나서 사용자가 찾고자 하는 정보의 키워드를 입력하면, 미리 만들어 놓은 색인 중에서 입력된 키워드에 해당하는 정보들을 찾아서 보여주는 것입니다.
 
-검색 엔진은 크게 정보 수집, 색인 그리고 검색의 순서로 동작합니다.
-
-검색 엔진은 사용자가 검색 엔진을 사용하기 전에 미리 웹 상에서 정보를 수집하여 색인을 만들어 놓습니다.
-
-그리고나서 사용자가 찾고자 하는 정보의 키워드를 입력하면, 미리 만들어 놓은 색인 중에서 입력된 키워드에 해당하는 정보들을 찾아서 보여주는 것입니다.
-
-현재 대부분의 검색 엔진에서는 웹상의 방대한 정보들을 검색하고 색인화하는 과정을 크롤러(crawler)라고 부르는 정보 수집 프로그램을 사용하여 수행하고 있습니다.
-
-이러한 크롤러가 주기적으로 웹에 접속된 사이트들을 방문하여 해당 웹 사이트가 가지고 있는 정보에 대해 색인을 작성한 후 그것을 데이터베이스에 저장하여 검색 시 활용하게 됩니다.
+  현재 대부분의 검색 엔진에서는 웹상의 방대한 정보들을 검색하고 색인화하는 과정을 크롤러(crawler)라고 부르는 정보 수집 프로그램을 사용하여 수행하고 있습니다. 이러한 크롤러가 주기적으로 웹에 접속된 사이트들을 방문하여 해당 웹 사이트가 가지고 있는 정보에 대해 색인을 작성한 후 그것을 데이터베이스에 저장하여 검색 시 활용하게 됩니다.
 
  
 
-**-****쿠키와 세션의 차이**
+##### 쿠키와 세션의 차이
 
- http는 클라이언트의 리퀘스트와 서버의 리스폰스 수행이 끝나면 접속이 끊겨 상태정보가 저장돼 있지 않습니다. 그러한 점을 극복하기 위해 쿠키와 클라이언트를 사용합니다. 쿠키는 클라이언트에 저장되고 세션은 서버에 저장됩니다.
+  http는 클라이언트의 리퀘스트와 서버의 리스폰스 수행이 끝나면 접속이 끊겨 상태정보가 저장돼 있지 않습니다. 그러한 점을 극복하기 위해 쿠키와 클라이언트를 사용합니다.
 
- 
-
-**- 동기와 비동기**
-
-동기 : 작업이 진행되는 동안 결과를 기다렸다가 결과를 직접 처리(폼 전송 형식)
-
-비동기 : 백그라운드에서 작업이 진행 되므로 바로 처리 가능(XmlHttpRequest자바 스크립트 객체를 전송)
+  쿠키는 클라이언트에 저장되고 세션은 서버에 저장됩니다.
 
  
 
-**- Blocking vs NonBlocking**
+##### 동기와 비동기
 
-A함수가 B 함수를 호출할 경우 blocking 은 B 함수가 자신의 작업을 모두 마칠때까지 A 함수는 자신의 작업을 못하고 대기 nonblocking 은 B 함수가 바로 리턴 반환하여 A함수는 거의 바로 자신의 작업을 시작 가능
+- 동기 : 작업이 진행되는 동안 결과를 기다렸다가 결과를 직접 처리(폼 전송 형식)
 
-보통 Blocking&동기, NonBlocking&비동기가 페어를 이룬다.
-
- 
-
-**- Restful** 
-
-모든 url을 리소르로 보는 것이다. url만을 보는 것으로 이 것이 무엇을 하는 것 인지 알 수 있다. 해당 URL만 보더라도 바로 어떤 작업을 하는지를 알 수 있도록 하나의 데이터는 하나의 url을 가지도록 한다.(get, post, put(수정), delete(삭제)) 가 있다
-
-HTTP 프로토콜은 Stateless Protocol이므로 REST 역시 무상태성을 갖는다.
-
-Client의 context를 Server에 저장하지 않는다.
-
-즉, 세션과 쿠키와 같은 context 정보를 신경쓰지 않아도 되므로 구현이 단순해진다.
+- 비동기 : 백그라운드에서 작업이 진행 되므로 바로 처리 가능(XmlHttpRequest자바 스크립트 객체를 전송)
 
  
 
-**- 스프링의 버전**
+##### Blocking vs NonBlocking
 
- 어플리케이션 개발 프레임워크
+  A함수가 B 함수를 호출할 경우 blocking 은 B 함수가 자신의 작업을 모두 마칠때까지 A 함수는 자신의 작업을 못하고 대기 nonblocking 은 B 함수가 바로 리턴 반환하여 A함수는 거의 바로 자신의 작업을 시작 가능
+
+  보통 Blocking&동기, NonBlocking&비동기가 페어를 이룬다.
 
  
 
-**- 스프링의 버전**
+##### Restful 
+
+  모든 url을 리소르로 보는 것이다. url만을 보는 것으로 이 것이 무엇을 하는 것 인지 알 수 있다. 해당 URL만 보더라도 바로 어떤 작업을 하는지를 알 수 있도록 하나의 데이터는 하나의 url을 가지도록 한다.(get, post, put(수정), delete(삭제)) 가 있다
+
+  HTTP 프로토콜은 Stateless Protocol이므로 REST 역시 무상태성을 갖는다. Client의 context를 Server에 저장하지 않는다.
+
+  즉, 세션과 쿠키와 같은 context 정보를 신경쓰지 않아도 되므로 구현이 단순해진다.
+
+
+
+##### 스프링의 버전
 
 spring 3.0 : Java 5이상 지원된다. Rest API 지원 추가
 
@@ -174,25 +164,21 @@ spring 5.0 : java8이 표준
 
  
 
-**- 스프링의 특징**
+##### 스프링의 특징
 
-POJO(Plain Old Java Object) : 객체 간의 관계를 구성할 때 별도의 API 등을 사용하지 않는다.
+- POJO(Plain Old Java Object) : 객체 간의 관계를 구성할 때 별도의 API 등을 사용하지 않는다.
 
-IOC(Inversion of Control) 제어의 역행 : 메소드나 객체의 호출작업을 개발자가 결정하는 것이 아니라 외부에서 결정 하는 것, new로 객체를 생성하는 것이 아닌 Bean으로 등록을 해두고 필요할 때마다 가져다 쓴다.
+- IOC(Inversion of Control) 제어의 역행 : 메소드나 객체의 호출작업을 개발자가 결정하는 것이 아니라 외부에서 결정 하는 것, new로 객체를 생성하는 것이 아닌 Bean으로 등록을 해두고 필요할 때마다 가져다 쓴다. 기존에는 개발자가 객체나 인스턴스를 코드 안에서 생성했다.
+  - bean : 스프링에서 제어권을 가지고 직접 만들어 관계를 부여하는 오브젝트
+  - BeanFactory : IoC컨테이너
 
-기존에는 개발자가 객체나 인스턴스를 코드 안에서 생성했다.
+- DI(Dependency Injection) : 의존성(의존관계) 주입, 제어의 역행이 일어날 때 스프링이 내부에 잇는 객체(Bean)들 간의 관계를 관리 할 때 사용하는 기법. 생성자를 통한 주입, Set 메소드를 이용한 주입 등이 있따. @Autowired
 
-bean : 스프링에서 제어권을 가지고 직접 만들어 관계를 부여하는 오브젝트
-
-BeanFactory : IoC컨테이너
-
-DI(Dependency Injection) : 의존성(의존관계) 주입, 제어의 역행이 일어날 때 스프링이 내부에 잇는 객체(Bean)들 간의 관계를 관리 할 때 사용하는 기법. 생성자를 통한 주입, Set 메소드를 이용한 주입 등이 있따. @Autowired
-
-AOP(Aspect Oriented Programming) 관점 지향 프로그래밍 : 공통 적인 로직을 뽑아내서 따로 제작해놓는 것
+- AOP(Aspect Oriented Programming) 관점 지향 프로그래밍 : 공통 적인 로직을 뽑아내서 따로 제작해놓는 것
 
  
 
-**- 스프링 MVC 동작원리**
+##### 스프링 MVC 동작원리
 
  
 
