--- a/웹.md
+++ b/웹.md
@@ -180,143 +180,127 @@ spring 5.0 : java8이 표준
 
 ##### 스프링 MVC 동작원리
 
- 
+ ![springmvc](https://github.com/ssyup4259/interview/blob/master/img/springmvc.png?raw=true)
 
-\1. request 가 들어오면 DispatcherServlet을 호출
+1. request 가 들어오면 DispatcherServlet을 호출
 
-\2. DispatcherServlet은 HanddlerMapping을 통해 호출한 컨트롤러를 찾는다.
+2. DispatcherServlet은 HanddlerMapping을 통해 호출한 컨트롤러를 찾는다.
 
-\3. 찾은 컨트롤러는 HanddlerAdapter를 통해 컨트롤러와 연결하고
+3. 찾은 컨트롤러는 HanddlerAdapter를 통해 컨트롤러와 연결하고
 
-\4. 컨트롤러에서는 Request 에서 요쳥한 것을 수행 한 후 Model 에 담아 DispatcehrServlet에게 넘겨준다.
+4. 컨트롤러에서는 Request 에서 요쳥한 것을 수행 한 후 Model 에 담아 DispatcehrServlet에게 넘겨준다.
 
-\5. DispatcherServlet은 ViewResolver를 통해 값을 넘겨 줄 view를 찾고
+5. DispatcherServlet은 ViewResolver를 통해 값을 넘겨 줄 view를 찾고
 
-\6. view는 실제로 응답 보내야 하는 jsp 등을 이용해서 생성하는 역할을 한다.
+6. view는 실제로 응답 보내야 하는 jsp 등을 이용해서 생성하는 역할을 한다.
 
-\7. 마지막으로 DispatcherServlet을 통해 만들어진 응답을 보낸다.
-
- 
-
-**- 스프링 어노테이션 종류**
-
- 객체 생성
-
-@Component
-
-하위 어노테이션,
-
-자동인식이 되는 일반 컴퍼넌트로 다른 녀석들의 부모역할을 한다.
-
-@Controller
-
-클래스 타입에 적용한다. 해당 클래스를 웹 요청을 처리하는 컨트롤러로 사용할 수 있다.
-
-@Repository 
-
-DB접근자, 데이터 접근 객체(DAO , Data Access Object)의 역할을 담당하는 객체 생성
-
-DB와 연동하여 데이터를 다루는 작업을 한다
-
-@Service 
-
-비즈니스 로직이나 트랜잭션을 처리하는 서비스클래스 객체 생성
-
-서비스클래스 : 사용자의 입력을 받는 클래스와 db를 처리하는 클래스 사이에서 일을 처리한다.
-
-객체 주입
-
-@Autowired
-
-객체 주입 시 '자료형'을 기준으로 주입. 객제가 없으면 오류 발생!
-
-의존하는 객체를 자동으로 삽입해주며 생성자, 필드, 메서드 세 곳에 적용이 가능하다. (스프링 전용)
-
-적용된 주입대상에 동일한 타입의 빈객체가 존재 시 특정 빈을 삽입할 수 있게해주는 기능이다.
-
-Spring에서 자동으로 Dependency Injection을 하기 위한 어노테이션
-
-@Autowired(required=false)
-
-옵션 추가시 주입될 객체가 없어도 가능 (null로 집어넣어서 통과시킴)
-
-@Inject
-
-타입에 맞춰서 연결한다. (자바에서 지원) 
-
-@Required
-
-Autowired와 비슷. 반드시 주입될 객체가 존재해야함
-
-@Resource(이름)
-
-객체에 등록된 '이름(bean객체의 id값)'으로 객체를 주입
-
- bean name으로 의존주입을 하고자 하는  경우 사용
-
-EX) - @Resource(name="")
-
-기타
-
-@Qualifier
-
-사용할 의존객체를 선택할 수 있도록 해준다.
-
-객체별로 별명이 있는데 주어진 별명(qualifier태그의 value속성값)으로 객체를 인식
-
-@Scope(value="prototype",proxyMode=ScopedProxyMode.TARGET_CLASS)
-
-일회용 객체를 설정할 때 사용
-
-태그로 사용될 경우 : <aop:scoped-proxy/>
-
-@PostConstruct
-
-객체 생성 후에 호출되야 하는 메서드 지정
-
-@InitBinder
-
-문자열로 표현된 날짜를 날짜형(java.sql.Date)으로 변환
-
-@RequestMapping(“URL”)
-
-컨트롤러로 넘어오는 URL을 각기 다른 뷰로 매핑하는 방식을 설계
-
-@SuppressWarnings
-
-프로그램에는 문제가 없는데, 간혹 컴파일러가 경고를 할 때, 이를 무시하라고 알려주는 기능이다.
+7. 마지막으로 DispatcherServlet을 통해 만들어진 응답을 보낸다.
 
  
 
-**- interceptor**
+##### 스프링 어노테이션 종류
+
+- 객체 생성
+
+  - @Component
+
+      하위 어노테이션, 자동인식이 되는 일반 컴퍼넌트로 다른 녀석들의 부모역할을 한다.
+
+  - @Controller
+
+      클래스 타입에 적용한다. 해당 클래스를 웹 요청을 처리하는 컨트롤러로 사용할 수 있다.
+
+  - @Repository
+
+      DB접근자, 데이터 접근 객체(DAO , Data Access Object)의 역할을 담당하는 객체 생성 DB와 연동하여 데이터를 다루는 작업을 한다
+
+  - @Service
+
+      비즈니스 로직이나 트랜잭션을 처리하는 서비스클래스 객체 생성
+
+    서비스클래스 : 사용자의 입력을 받는 클래스와 db를 처리하는 클래스 사이에서 일을 처리한다.
+
+- 객체 주입
+
+  - @Autowired
+
+      객체 주입 시 '자료형'을 기준으로 주입. 객제가 없으면 오류 발생! 의존하는 객체를 자동으로 삽입해주며 생성자, 필드, 메서드 세 곳에 적용이 가능하다. (스프링 전용) 적용된 주입대상에 동일한 타입의 빈객체가 존재 시 특정 빈을 삽입할 수 있게해주는 기능이다. Spring에서 자동으로 Dependency Injection을 하기 위한 어노테이션
+
+  - @Autowired(required=false)
+
+      옵션 추가시 주입될 객체가 없어도 가능 (null로 집어넣어서 통과시킴)
+
+  - @Inject
+
+      타입에 맞춰서 연결한다. (자바에서 지원) 
+
+  - @Required
+
+      Autowired와 비슷. 반드시 주입될 객체가 존재해야함
+
+  - @Resource(이름)
+
+      객체에 등록된 '이름(bean객체의 id값)'으로 객체를 주입bean name으로 의존주입을 하고자 하는  경우 사용
+
+    EX) - @Resource(name="")
+
+- 기타
+
+  - @Qualifier
+
+      사용할 의존객체를 선택할 수 있도록 해준다.객체별로 별명이 있는데 주어진 별명(qualifier태그의 value속성값)으로 객체를 인식
+
+  - @Scope(value="prototype",proxyMode=ScopedProxyMode.TARGET_CLASS)
+
+      일회용 객체를 설정할 때 사용태그로 사용될 경우 : <aop:scoped-proxy/>
+
+  - @PostConstruct
+
+      객체 생성 후에 호출되야 하는 메서드 지정
+
+  - @InitBinder
+
+      문자열로 표현된 날짜를 날짜형(java.sql.Date)으로 변환
+
+  - @RequestMapping(“URL”)
+
+      컨트롤러로 넘어오는 URL을 각기 다른 뷰로 매핑하는 방식을 설계
+
+  - @SuppressWarnings
+
+      프로그램에는 문제가 없는데, 간혹 컴파일러가 경고를 할 때, 이를 무시하라고 알려주는 기능이다.
+
+ 
+
+##### interceptor
 
 인터셉터는 웹 MVC 동작과정 중에서 할 수 있다. 컨트롤러를 실행하기전, 컨트롤러를 실행한 후, 뷰 실행전, 뷰를 실행한 이후에 메서드를 실행하여 특정 시점에서 원하는 기능을 실행 할 수 있다.
 
 HandlerInterceptor 클래스 상속
 
-preHandle() : 컨트롤러를 실행하기 전
+- preHandle() : 컨트롤러를 실행하기 전
 
-postHandle() : 컨트롤러가 실행 이후
+- postHandle() : 컨트롤러가 실행 이후
 
-afterCompletion() : 뷰가 클라이언트 응답을 전송한 뒤
+- afterCompletion() : 뷰가 클라이언트 응답을 전송한 뒤
 
  
 
-**- Filter**
+##### Filter
 
  공통적인 기능들을 servlet이 호출되기 전에 수행하고 싶거나 servlet이 호출되고 난 후에 수행 하고 싶을 경우 사용, servlet과 비슷한 라이프 사이클을 가지며 생성 초기화 필터 종료 4단계로 이루어진다.
 
  
 
-**-root-context vs servlet-context**
+##### root-context vs servlet-context
 
-root-context.xml
+- root-context.xml
 
 용도 : 웹 자원과 관련되지 않은 모든 자원을 설정  
 
 예시: DB,Mybatis 연결,트랜잭션 처리 ,DataSource,SqlSessionFactory,TransactionManager
 
-servelet-context.xml
+- servelet-context.xml
 
 용도: 웹 자원과 관련된 설정 (스프링 MVC 컨트롤러 관련설정 )
 
@@ -332,70 +316,64 @@ InternalResourceViewResolver : 뷰처리방법,
 
  
 
-**- DAO(Data Access Object)**
+##### DAO(Data Access Object)
 
  domain logic을 persistence mechanism과 분리하기 위해 사용
 
  
 
-**- DTO(Data Transfer Object)**
+##### DTO(Data Transfer Object)
 
  계층간 데이터 교환을 위한 java beans, DB에서 받아온 데이터들을 매핑하기 위한 객체, 일반적으로 getter, setter만 있다.
 
  
 
-**- Service**
+##### Service
 
  Controller가 Request를 받으면 적절한 Service에 전달하고, 전달 받은 Service는 business logic을 처리 Service가 DB에 DAO 로 접근하고, 데이터를 DTO로 전달받음 다음 데이터를 필요에 맞게 가공하여 반환
 
  
 
-**- MyBatis**
+##### MyBatis
 
-JDBC를 좀더 편하게 사용할 수 있도록 SQL이나 저장 프로시저와 매핑 해주는 프레임워크 SQL 구문을 java 메소드와 매핑해준다. 객체를 단순히 데이터 전달 목적에만 사용한다. 테이블에 약간의 수정만 있더라도 관련되 dao들에 변경이 잇을 수 있다.
+  JDBC를 좀더 편하게 사용할 수 있도록 SQL이나 저장 프로시저와 매핑 해주는 프레임워크 SQL 구문을 java 메소드와 매핑해준다. 객체를 단순히 데이터 전달 목적에만 사용한다. 테이블에 약간의 수정만 있더라도 관련되 dao들에 변경이 잇을 수 있다.
 
  
 
-**- ORM**
+##### ORM
 
  객체형 데이터와 관계형 데이터 사이에서 개념적으로 개념적으로 일치하지 않는 부분을 해결하기 위해 이 둘 사이를 mapping 한 것을 의미한다.
 
  
 
-**- JPA**
+##### JPA
 
-자바 객체를 데이터 테이블과 매핑 시킨다. 자바 진영의 ORM 표준 기술이다.
+  자바 객체를 데이터 테이블과 매핑 시킨다. 자바 진영의 ORM 표준 기술이다.
 
-생산성 CRUD 와 같은 간단한 쿼리는 자동으로 된다. 추가 속성이 생겼을 때 Entity에 속성만 추가시켜주면 된다.
-
-ORM: 데이터베이스 객체를 자바 객체로 매핑하여 객체 간의 관계를 바탕으로 SQL을 자동으로 생성
+  생산성 CRUD 와 같은 간단한 쿼리는 자동으로 된다. 추가 속성이 생겼을 때 Entity에 속성만 추가시켜주면 된다.
 
  
 
-**- Spring Boot**
+##### Spring Boot
 
  웹 컨테이너(Tomcat)를 내장 하고 있고, 최소한의 설정으로 쉽게 Application을 만들 수 있다
 
  
 
-**- Gradle**
+##### Gradle
 
  gradle은 자바와 유사한 groovy라는 언어로 빌드 스크립트를 작성하기에 maven 보다 가독성이 좋다. maven보다 조금 더 빠르다
 
  
 
-**- JWT(JSON Web Token)**
+##### JWT(JSON Web Token)
 
 aaaaaa.bbbbbb.cccccc : 헤더.내용.서명
 
-헤더에는 토큰의 타입과 해싱 알고리즘 정보가 저장된다. paylod 에는 토큰에 대한 클레임이 저장된다. 즉 정보들이다. 서명에는 헤더의 인코딩값과 정보의 인코딩값을 합친후 주어진 비밀키로 해쉬를 하여 생성한다.
+- 헤더에는 토큰의 타입과 해싱 알고리즘 정보가 저장된다.
+- paylod 에는 토큰에 대한 클레임이 저장된다. 즉 정보들이다.
+- 서명에는 헤더의 인코딩값과 정보의 인코딩값을 합친후 주어진 비밀키로 해쉬를 하여 생성한다.
 
-http 인증헤더를 통해서 서버에 보낸다.
+http 인증헤더를 통해서 서버에 보낸다. stateless, 유저의 인증 정보를 서버나 세션에 담아 두지 않는다.
 
-stateless, 유저의 인증 정보를 서버나 세션에 담아 두지 않는다.
-
- 
-
- 
-
- 
+![jwt](https://github.com/ssyup4259/interview/blob/master/img/jwt.png?raw=true)
