--- a/통신네트워크.md
+++ b/통신네트워크.md
@@ -12,7 +12,9 @@
 
 - UDP는 송신 측과 수신 측의 연결을 거치지 않고 일방적으로 데이터를 보내고 데이터를 전송해도 수신으로부터 응답은 따로 받지 않는다. DNS 검색할 때 사용된다.
 
- <br>
+[더 자세히 알기](https://blog.naver.com/11tjdnfeo/222105085947) 
+
+<br>
 
 #### OSI 7 계층
 
@@ -86,3 +88,4 @@
 
       만약 클라이언트가 fin을 보내기전 앞선 패킷이 늦게 왔다면 클라이언트는 서버로부터 fin을 수신하고 나서 일정시간(디폴트 240초간) 동안 세션을 남겨놓고 잉여 패킷을 기다리게 된다 이 과정을 TIME_WAIT이라한다.
 
+[더 자세히 알기](https://blog.naver.com/11tjdnfeo/222105085947)
