--- a/통신네트워크.md
+++ b/통신네트워크.md
@@ -27,38 +27,35 @@
   - 사용자 장비와 네트워크 종단장비 사이의 물리적, 전기적인 인터페이스 규정에 초점을 두고 있으며, 전송 선로의 종류에 따라 전송방식과 인코딩 방식을 결정한 다.
   - 전송 단위는 Bit를 사용한다.
   - 단지 데이터 전달의 역할을 할 뿐이다. 
-
 - Data-Link Layer - 데이터링크 계층
   - 전송 단위는 Frame을 사용하며 주소는 Mac을 사용한다. 
   - 물리계층의 있는 그대로의 전송설비를 신뢰할 수 있는 링크로 변환한다. 이는 상위 계층인 네트워크 계층에게 오류 없는 물리계층으로 보이도록 한다. 
   - 네트워크계층에서 정보를 받아 주소와 제어정보를 헤더와 테일에 추가한다.
-
 - Network Layer - 네트워크 계층
   - 전송 단위는 Packet을 사용하며 주소는 IP를 사용한다. ② 송신측에서 수신측까지 데이터를 안전하게 전달하기 위해서 논리적 링크(네트워크) 를 설정 하고 상위계층 데이터를 작은 크기의 패킷으로 분할하여 전송하는 역할을 수행한다. 
   - 데이터를 목적지까지 가장 안전하고 빠르게 전달하도록 한다. -Routing 기능
-
 - Transport Layer - 전송계층
   - 전송 단위는 Segment를 사용하며 주소는 Port를 사용한다.
   - OSI 7계층 구조는 전송계층을 기점으로 하위계층으로 이루어진 네트워크 서비 스와 상위계층으로 이루어진 사용자 서비스로 구별 될 수 있다.
   - 전체 메시지를 발신지 대 목적지 (end-to-end)간 제어와 에러를 관리한다.
   - end-to-end 전송은 단순히 한 컴퓨터에서 다음 컴퓨터로의 전달이 아니라, 송신 컴퓨터의 응용프로그램(프로세스)에서 최종 수신 컴퓨터의 응용프로그램(프로세스) 으로의 전달을 의미한다. 
-
 - Session Layer - 세션계층
   - 전송 단위는 message이다.
   - 세션 계층은 네트워크 대화 제어기로 통신 시스템 간에 상호대화를 설정하고, 유지하고, 동기화 한다.
   - 실제 이용자의 응용프로그램 사이에서 세션이라 불리는 연결을 확립하고 유지하 며 동기화 하는 기능을 제공한다.
   - 세션계층은 표현계층으로부터 받은 데이터를 효율적인 세션 관리를 위해 짧은 데이터 단위로 나눈 후에 전송 계층으로 내려 보낸다. 
-
 - Presentation Layer - 표현계층
   - 전송 단위는 message이다.
   - 송,수신자가 공통으로 이해 할 수 있도록 정보의 데이터 표현방식을 바꾸는 기 능을 담당한다.
   - 송신측의 표현계층은 응용계층으로부터 받은 데이터의 보안과 효율적인 전송을 위해 암호화와 압축을 수행하여 세션 계층으로 내려 보낸다.
-
 - Application Layer – 응용계층
   - 전송 단위는 message이다.
   - 최 상위 계층으로 사용자가 네트워크에 접속하는 것을 가능하게 한다. 전자우편, 원격파일 접속과 전송 등 사용자 인터페이스를 제공한다.
 
-  <br>
+
+[더 자세히 알기](https://blog.naver.com/11tjdnfeo/222105087770)
+
+<br>
 
 #### handshake
 
